tests/fail/cap_struct.stderr
error[E0277]: the trait bound `CapService: Capability<capabilities::Delete<Orders>>` is not satisfied
 --> tests/fail/cap_struct.rs:4:38
  |
4 | #[capabilities(Create, Read, Update, Delete)]
  |                                      ^^^^^^ the trait `Capability<capabilities::Delete<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CapDeleteOrders`
 --> tests/fail/cap_struct.rs:4:1
  |
4 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CapDeleteOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: Capability<capabilities::Update<Orders>>` is not satisfied
 --> tests/fail/cap_struct.rs:4:30
  |
4 | #[capabilities(Create, Read, Update, Delete)]
  |                              ^^^^^^ the trait `Capability<capabilities::Update<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CapUpdateOrders`
 --> tests/fail/cap_struct.rs:4:1
  |
4 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CapUpdateOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: Capability<capabilities::Read<Orders>>` is not satisfied
 --> tests/fail/cap_struct.rs:4:24
  |
4 | #[capabilities(Create, Read, Update, Delete)]
  |                        ^^^^ the trait `Capability<capabilities::Read<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CapReadOrders`
 --> tests/fail/cap_struct.rs:4:1
  |
4 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CapReadOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CapService: Capability<capabilities::Create<Orders>>` is not satisfied
 --> tests/fail/cap_struct.rs:4:16
  |
4 | #[capabilities(Create, Read, Update, Delete)]
  |                ^^^^^^ the trait `Capability<capabilities::Create<Orders>>` is not implemented for `CapService`
  |
note: required by a bound in `CapCreateOrders`
 --> tests/fail/cap_struct.rs:4:1
  |
4 | #[capabilities(Create, Read, Update, Delete)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CapCreateOrders`
  = note: this error originates in the macro `cap` (in Nightly builds, run with -Z macro-backtrace for more info)
